--- a/src/sass/utils/_theme.scss
+++ b/src/sass/utils/_theme.scss
@@ -13,9 +13,10 @@
 		// Open dropdown
 		.nav li.dropdown.open > .dropdown-toggle,
 		.nav li.dropdown.open.active > .dropdown-toggle {
-		  color: $text;
-		  background: darken($color, 10%);
+			color: $text;
+			background: darken($color, 10%);
 			@include background(linear-gradient(top, darken($color, 10%), $color));
+			@include box-shadow(inset 0 3px 8px rgba(0, 0, 0, 0.125));
 		}
 		
 		// Active section
@@ -54,7 +55,7 @@
 			border-bottom-color: $text;
 		}
 		
-		// Dropdown over
+		// Dropdown items over
 		.dropdown-menu > li > a:hover,
 		.dropdown-menu > li > a:focus,
 		.dropdown-submenu:hover > a,
@@ -68,9 +69,48 @@
 			background: darken($color, 10%);
 		}
 		
+		// Make the icon look a little sunken in
 		.gravatar {
 			@include box-shadow(0 1px 1px 0 darken($color, 10%));
 		}
+		
+		// The mobile toggle
+		.btn-navbar {
+			@include background(linear-gradient(top, lighten($color, 5%), darken($color, 10%)));
+		}
+		
+		// Mobile stuff
+		@media (max-width: $bootstrap_nav_break) {
+			.nav-collapse {
+			
+				// The submenu labels
+				.nav > li > a,
+				.dropdown-menu a {
+					color: $text;
+					color: rgba($text, .8);
+					font-weight: normal;
+				}
+				
+				// The hovers on menu items
+				.nav > li > a:hover,
+				.nav > li > a:focus,
+				.dropdown-menu a:hover,
+				.dropdown-menu a:focus {
+					background: none;
+					color: $text;
+				}
+				
+				// Active section
+				.nav > .active > a,
+				.nav > .active > a:hover,
+				.nav > .active > a:focus,
+				.nav li.dropdown.active > .dropdown-toggle {
+					color: $text;
+					background: darken($color, 10%);
+				}
+			}
+		}
+		
 	}
 	
 	// The selected page within fragments
